<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/size_30dp"
        android:layout_marginLeft="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_30dp"
        android:layout_marginStart="@dimen/size_30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_customer_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:background="@drawable/txt_bg"
            android:gravity="center_vertical|left|start"
            android:hint="@string/txt_customer_name"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="@dimen/size_10dp"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:paddingStart="@dimen/size_10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/size_15sp"/>

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:background="@drawable/txt_bg"
            android:gravity="center_vertical|left|start"
            android:hint="@string/txt_phone"
            android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionGo"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingEnd="@dimen/size_10dp"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:paddingStart="@dimen/size_10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/size_15sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:background="@drawable/btn_bg"
            android:onClick="showQuestion"
            android:text="@string/btn_next"
            android:textAllCaps="false"
            android:textSize="@dimen/size_16sp"/>
    </LinearLayout>

    <include
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>