<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"
        android:layout_alignParentTop="true"/>

    <include
        android:id="@+id/footer"
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20dp"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:layout_margin="@dimen/size_30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_120dp"
            android:background="@drawable/txt_bg"
            android:orientation="vertical"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_15dp"
                android:text="@string/lbl_message1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_15sp"/>

            <TextView
                android:id="@+id/lbl_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_20dp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_15sp"/>
        </LinearLayout>

        <ListView
            android:id="@+id/list_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/size_5dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_weight="1"
            android:background="@drawable/txt_bg"
            android:choiceMode="singleChoice"
            android:divider="@android:color/white"
            android:dividerHeight="@dimen/size_1dp"
            android:scrollbars="none"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:background="@drawable/btn_bg"
            android:onClick="replay"
            android:text="@string/btn_replay"
            android:textAllCaps="false"
            android:textSize="@dimen/size_15sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:background="@drawable/txt_bg"
            android:onClick="quit"
            android:text="@string/btn_quit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_15sp"/>
    </LinearLayout>

</RelativeLayout>