<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main"
              android:orientation="vertical">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/size_25dp"
        android:layout_marginEnd="@dimen/size_30dp"
        android:layout_marginLeft="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_30dp"
        android:layout_marginStart="@dimen/size_30dp"
        android:layout_marginTop="@dimen/size_25dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/area_question"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_120dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@drawable/txt_bg"
            android:padding="@dimen/size_10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_15dp"
                    android:text="@string/lbl_question"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_14sp"/>

                <TextView
                    android:id="@+id/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_14sp"/>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/question_number"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:textSize="@dimen/size_15sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/size_25dp"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:onClick="nextQuestion"
            android:text="@string/btn_next"
            android:textSize="@dimen/size_15sp"/>

        <LinearLayout
            android:id="@+id/area_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_next"
            android:layout_below="@id/area_question"
            android:layout_marginTop="@dimen/size_10dp"
            android:background="@drawable/txt_bg"
            android:orientation="vertical"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_5dp"
                android:text="@string/lbl_answers"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_14sp"/>

            <ListView
                android:id="@+id/list_answers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:layout_weight="1"
                android:choiceMode="singleChoice"
                android:divider="@null"
                android:dividerHeight="@dimen/size_10dp"
                android:scrollbars="none"/>
        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20dp"/>

</LinearLayout>